# heron-systems-training

./: README.md
pytest/: note_about_pytest.txt  pytest_transformers.code-workspace
pytest/transformers_pytest/: nlp_transformers_test.py  note_on_preprocess.txt
pytest/tutorials/: pytest_1.py  pytest_2.py  pytest_3.py
rl/1_policy_gradient/: intro_to_rl.docx  ~$tro_to_rl.docx
rl/I_intro_rl/: intro_to_rl.docx
rl/david_silver/: .~lock.2_mdp.docx#  1_intro_rl.docx  2_mdp.docx  ~$2_mdp.docx  ~$intro_rl.docx  ~WRL2257.tmp  ~WRL3495.tmp
rl/deeplizard/: .~lock.note.docx#  .~lock.rl_deeplizard_note.odt#  DQN Project.ipynb  Q Learning Frozen Lake.ipynb  note.docx  rl_deeplizard_note.odt  ~$note.docx
rl/stable_baseline/: parking.py  sb_cartpole.py  stable_baseline_examples.ipynb
rnn/scratch_ipynb/: Recurrent Neural Networks Implement From Scratch.ipynb
rnn/text-translation/: Neural Machine Translation By Jointly Learning to Align and Translate.ipynb
search_algorithms/: different_search_algo.txt
search_algorithms/greedy_search/: greedy.py  greedy.txt  knapsack.py
search_algorithms/gus/: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  setup.py
search_algorithms/gus/eigen_debug/: printers.py
search_algorithms/gus/gus/: __init__.py  selector.h  selector.py  selector_impl.cc  selector_test.cc  selector_test.h  selector_test.py  test_utils.py
search_algorithms/search/: base.py  neural_input_optimizer.py  neural_input_optimizer_example.py  neural_input_optimizer_example_minh.py  neural_input_optimizer_minh.py  note_minh.py  search.py  utils.py
tensorboard/: networks.py  preprocess.py
tensorboard/fashion_mnist/: main.py  note.txt
transformer/test_gb_transformer/: bleu.py  inference.py  test_model.py
transformer/test_gb_transformer_alex/: readme.txt  test_model.py
transformer/test_transformer/: main.py  note_stabilizing_transformer.txt  test_model.py
transformer/transformer_implementation/: attention_explain.txt  inference.py  main.py
transformers/: Transformer - Attention Is All You Need.ipynb
transformers/.ipynb_checkpoints/: Recurrent Neural Networks Implementation Trial 1-checkpoint.ipynb  Transformer - Attention Is All You Need-checkpoint.ipynb
transformers/gb_transformers_test/: nlp_transformers_test.py
transformers/test_gb_transformer/: bleu.py  main.py  test_model.py
transformers/test_gb_transformer_alex/: bleu.py  inference.py  main.py
transformers/test_transformer/: main.py  test_model.py
transformers/transformer_implementation/: bleu.py  inference.py  main.py
(+217 files in other folders)
